--- a/assets/css/studentStyle.css
+++ b/assets/css/studentStyle.css
@@ -599,6 +599,16 @@ body {
     background-color: #4a0d03;
 }
 
+footer {
+    text-align: center;
+    padding: 15px;
+    background-color: #6d1204;
+    color: #ffffff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    display: block;
+}
+
 @media (min-width: 724px) and (max-width: 1023px) {
     .container {
         grid-template-columns: 1fr;
